--- a/public/templates/theme-v2/home/index.html
+++ b/public/templates/theme-v2/home/index.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="cat-box">
-                    <img class="w-100 h-100" src="../../../assets/images/female-b-1.png" alt="">
+                    <img class="w-100 h-100" src="/assets/images/female-b-1.png" alt="">
                     <div class="cat-box-item">
                         Bộ sưu tập Essentials<br>
                         "Shop more and save more"
@@ -12,7 +12,7 @@
             </div>
             <div class="col-md-4 d-flex flex-column justify-content-between">
                 <div class="cat-box m-mt16">
-                    <img class="w-100" src="../../../assets/images/female-2.png" alt="">
+                    <img class="w-100" src="/assets/images/female-2.png" alt="">
                     <div class="cat-box-item">
                         Bộ sưu tập Essentials<br>
                         "Shop more and save more"
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="cat-box m-mt16">
-                    <img class="w-100" src="../../../assets/images/female-3.png" alt="">
+                    <img class="w-100" src="/assets/images/female-3.png" alt="">
                     <div class="cat-box-item">
                         Bộ sưu tập Essentials<br>
                         "Shop more and save more"
@@ -31,7 +31,7 @@
         <div class="row mt32">
             <div class="col-md-4">
                 <div class="cat-box w-32">
-                    <img class="w-100" src="../../../assets/images/female-4.png" alt="">
+                    <img class="w-100" src="/assets/images/female-4.png" alt="">
                     <div class="cat-box-item">
                         Bộ sưu tập Essentials<br>
                         "Shop more and save more"
@@ -40,7 +40,7 @@
             </div>
             <div class="col-md-4">
                 <div class="cat-box w-32 m-mt16">
-                    <img class="w-100" src="../../../assets/images/female-5.png" alt="">
+                    <img class="w-100" src="/assets/images/female-5.png" alt="">
                     <div class="cat-box-item">
                         Bộ sưu tập Essentials<br>
                         "Shop more and save more"
@@ -49,7 +49,7 @@
             </div>
             <div class="col-md-4">
                 <div class="cat-box w-32 m-mt16">
-                    <img class="w-100" src="../../../assets/images/female-6.png" alt="">
+                    <img class="w-100" src="/assets/images/female-6.png" alt="">
                     <div class="cat-box-item">
                         Bộ sưu tập Essentials<br>
                         "Shop more and save more"
@@ -60,7 +60,7 @@
         <div class="row mt32">
             <div class="col-md-4">
                 <div class="cat-box w-32">
-                    <img class="w-100" src="../../../assets/images/female-7.png" alt="">
+                    <img class="w-100" src="/assets/images/female-7.png" alt="">
                     <div class="cat-box-item">
                         Bộ sưu tập Essentials<br>
                         "Shop more and save more"
@@ -69,7 +69,7 @@
             </div>
             <div class="col-md-8">
                 <div class="cat-box w-32 m-mt16">
-                    <img class="w-100" src="../../../assets/images/female-8.png" alt="">
+                    <img class="w-100" src="/assets/images/female-8.png" alt="">
                     <div class="cat-box-item">
                         Bộ sưu tập Essentials<br>
                         "Shop more and save more"
@@ -83,98 +83,14 @@
             </div>
             <div class="col-md-12 mt8 d-flex flex-wrap">
                 <div class="cat-box-small">
-                    <img class="w-100" src="../../../assets/images/female-s-1.png" alt="">
+                    <img class="w-100" src="/assets/images/female-s-1.png" alt="">
                     <div class="cat-box-small-text">
                         <div class="product-name">Bộ sưu tập Essentials</div>
                         <div class="content product-price-discount">150.000 VND</div>
                         <div class="w-100 d-flex justify-content-between">
                             <div class="content product-price">150.000 VND</div>
                             <div class="discount-tag">
-                                <img class="img-discount-tag" src="../../../assets/images/discount-tag.png" alt="">
-                                <div class="content-discount-tag">-20%</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cat-box-small">
-                    <img class="w-100" src="../../../assets/images/female-s-1.png" alt="">
-                    <div class="cat-box-small-text">
-                        <div class="product-name">Bộ sưu tập Essentials</div>
-                        <div class="content product-price-discount">150.000 VND</div>
-                        <div class="w-100 d-flex justify-content-between">
-                            <div class="content product-price">150.000 VND</div>
-                            <div class="discount-tag">
-                                <img class="img-discount-tag" src="../../../assets/images/discount-tag.png" alt="">
-                                <div class="content-discount-tag">-20%</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cat-box-small">
-                    <img class="w-100" src="../../../assets/images/female-s-1.png" alt="">
-                    <div class="cat-box-small-text">
-                        <div class="product-name">Bộ sưu tập Essentials</div>
-                        <div class="content product-price-discount">150.000 VND</div>
-                        <div class="w-100 d-flex justify-content-between">
-                            <div class="content product-price">150.000 VND</div>
-                            <div class="discount-tag">
-                                <img class="img-discount-tag" src="../../../assets/images/discount-tag.png" alt="">
-                                <div class="content-discount-tag">-20%</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cat-box-small">
-                    <img class="w-100" src="../../../assets/images/female-s-1.png" alt="">
-                    <div class="cat-box-small-text">
-                        <div class="product-name">Bộ sưu tập Essentials</div>
-                        <div class="content product-price-discount">150.000 VND</div>
-                        <div class="w-100 d-flex justify-content-between">
-                            <div class="content product-price">150.000 VND</div>
-                            <div class="discount-tag">
-                                <img class="img-discount-tag" src="../../../assets/images/discount-tag.png" alt="">
-                                <div class="content-discount-tag">-20%</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cat-box-small">
-                    <img class="w-100" src="../../../assets/images/female-s-1.png" alt="">
-                    <div class="cat-box-small-text">
-                        <div class="product-name">Bộ sưu tập Essentials</div>
-                        <div class="content product-price-discount">150.000 VND</div>
-                        <div class="w-100 d-flex justify-content-between">
-                            <div class="content product-price">150.000 VND</div>
-                            <div class="discount-tag">
-                                <img class="img-discount-tag" src="../../../assets/images/discount-tag.png" alt="">
-                                <div class="content-discount-tag">-20%</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cat-box-small">
-                    <img class="w-100" src="../../../assets/images/female-s-1.png" alt="">
-                    <div class="cat-box-small-text">
-                        <div class="product-name">Bộ sưu tập Essentials</div>
-                        <div class="content product-price-discount">150.000 VND</div>
-                        <div class="w-100 d-flex justify-content-between">
-                            <div class="content product-price">150.000 VND</div>
-                            <div class="discount-tag">
-                                <img class="img-discount-tag" src="../../../assets/images/discount-tag.png" alt="">
-                                <div class="content-discount-tag">-20%</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cat-box-small">
-                    <img class="w-100" src="../../../assets/images/female-s-1.png" alt="">
-                    <div class="cat-box-small-text">
-                        <div class="product-name">Bộ sưu tập Essentials</div>
-                        <div class="content product-price-discount">150.000 VND</div>
-                        <div class="w-100 d-flex justify-content-between">
-                            <div class="content product-price">150.000 VND</div>
-                            <div class="discount-tag">
-                                <img class="img-discount-tag" src="../../../assets/images/discount-tag.png" alt="">
+                                <img class="img-discount-tag" src="/assets/images/discount-tag.png" alt="">
                                 <div class="content-discount-tag">-20%</div>
                             </div>
                         </div>
