--- a/public/templates/theme-v2/cart/index.html
+++ b/public/templates/theme-v2/cart/index.html
@@ -20,7 +20,6 @@
                 <div>Tổng giá</div>
             </div>
         </div>
-
         <div class="row mt16">
             <section class="cart-product-group content text-grey">
                 <div class="cart-product-item py16" ng-repeat="cartDetail in ctrl.clientCart" ng-if="cartDetail.quantity > 0">
@@ -33,9 +32,11 @@
                         <div class="font-size-12 mt16">Combo: 02</div>
                         <div class="font-size-12">Size: XL</div>
                     </div>
-                    <div class="col-2 d-flex">
-                        <div class="cart-product-amount text-center">{{cartDetail.quantity}}</div>
-                        <div class="line-height-32 font-size-14 ml8" ng-click="ctrl.removeItemCartClient(cartDetail.product_id)">Xóa sản phẩm</div>
+                    <div class="col-2">
+                        <span class="subtraction" ng-click="ctrl.removeProductClient(cartDetail.product_id)">-</span>
+                        <span class="cart-product-amount text-center">{{cartDetail.quantity}}</span>
+                        <span class="addition" ng-click="ctrl.addProductClient(cartDetail.product_id)">+</span>
+                        <span class="line-height-32 font-size-14 ml8" ng-click="ctrl.removeItemCartClient(cartDetail.product_id)">Xóa sản phẩm</span>
                     </div>
                     <div class="col-2">
                         <div class="cart-product-amount-price">{{cartDetail.price | currency: "": 0 }}</div>
@@ -51,11 +52,8 @@
                 <div>* Đơn hàng của bạn được <a class="text-blue text-uppercase" href="">MIỄN PHÍ VẬN CHUYỂN</a></div>
                 <div class="mt16">* Đơn hàng của bạn còn thiếu 200,000 VND thì sẽ được MIỄN PHÍ VẬN CHUYỂN!</div>
                 <div>&nbsp;&nbsp;<a class="text-red" href="#">Tiếp tục mua sắm ></a></div>
-
                 <textarea class="form-control mt32" type="text" placeholder="Chú thích đơn hàng" rows="5"></textarea>
-
                 <div class="text-grey-more text-uppercase font-size-18 mt16">Mã khuyến mãi</div>
-
                 <div class="row py8">
                     <div class="col-9">
                         <input class="input-control" type="text">
@@ -78,7 +76,6 @@
                     <div class="">Giảm giá</div>
                     <div class="">0</div>
                 </div>
-
                 <div class="d-flex justify-content-between mt32 border-top-1 py8">
                     <div class="text-uppercase">Tổng giá</div>
                     <div class="">{{ctrl.totalPrice | currency: "": 0: "." }}</div>
