code login and cart
code login and register

--- a/public/templates/theme-v2/home/index.html
+++ b/public/templates/theme-v2/home/index.html
@@ -1,5 +1,5 @@
 <main>
-    <div class="container py24">
+    <div class="container">
         <div ng-repeat="homeData in ctrl.homeData">
             <div ng-if="homeData.type == 1" class="row">
                 <div class="col-md-8">
