code 3 level-menu

--- a/prototype/vnshop/css/main.css
+++ b/prototype/vnshop/css/main.css
@@ -495,6 +495,7 @@ p.content-discount-tag {
     bottom: 0;
     left: -200px;
     width: 200px;
+    min-height:1000px;
     background: #2a2a2a;
     z-index: 9999;
     padding: 16px 0;
