--- a/public/templates/theme-v2/cart/index.html
+++ b/public/templates/theme-v2/cart/index.html
@@ -6,82 +6,84 @@
                 <li class="breadcrumb-item active">Giỏ hàng của tôi</li>
             </ol>
         </div>
-        <div class="row mt16 content text-grey-more border-bottom-1 py8">
-            <div class="col-6">
-                <div class="">Sản phẩm</div>
+        <div class="product-order" ng-if="ctrl.clientCart.length > 0">
+            <div class="row mt16 content text-grey-more border-bottom-1 py8">
+                <div class="col-6">
+                    <div class="">Sản phẩm</div>
+                </div>
+                <div class="col-2">
+                    <div>Số lượng</div>
+                </div>
+                <div class="col-2">
+                    <div>Giá</div>
+                </div>
+                <div class="col-2 text-right">
+                    <div>Tổng giá</div>
+                </div>
             </div>
-            <div class="col-2">
-                <div>Số lượng</div>
+            <div class="row mt16">
+                <section class="cart-product-group content text-grey">
+                    <div class="cart-product-item py16" ng-repeat="cartDetail in ctrl.clientCart">
+                        <div class="col-2">
+                            <img ng-click="ctrl.openDetail(cartDetail.product_id)" class="w-100" src="{{cartDetail.image}}" alt="">
+                        </div>
+                        <div class="col-4">
+                            <div class="font-size-14 mt16" ng-click="ctrl.openDetail(cartDetail.product_id)">{{cartDetail.name}}</div>
+                        </div>
+                        <div class="col-2">
+                            <span class="subtraction" ng-click="ctrl.removeProductClient(cartDetail.product_id)">-</span>
+                            <span class="cart-product-amount text-center">{{cartDetail.quantity}}</span>
+                            <span class="addition" ng-click="ctrl.addProductClient(cartDetail.product_id)">+</span>
+                            <span class="line-height-32 font-size-14 ml8" ng-click="ctrl.removeItemCartClient(cartDetail.product_id)">Xóa sản phẩm</span>
+                        </div>
+                        <div class="col-2">
+                            <div class="cart-product-amount-price">{{cartDetail.price | currency: "": 0 }}</div>
+                        </div>
+                        <div class="col-2 text-right">
+                            <div class="cart-product-amount-price">{{cartDetail.price*cartDetail.quantity | currency: "": 0 }}</div>
+                        </div>
+                    </div>
+                </section>
             </div>
-            <div class="col-2">
-                <div>Giá</div>
-            </div>
-            <div class="col-2 text-right">
-                <div>Tổng giá</div>
+            <div class="row py16 border-top-1 content text-grey">
+                <div class="col-6 font-size-14">
+                    <div>* Đơn hàng của bạn được <a class="text-blue text-uppercase" href="">MIỄN PHÍ VẬN CHUYỂN</a></div>
+                    <div class="mt16">* Đơn hàng của bạn còn thiếu 200,000 VND thì sẽ được MIỄN PHÍ VẬN CHUYỂN!</div>
+                    <div>&nbsp;&nbsp;<a class="text-red" href="#">Tiếp tục mua sắm ></a></div>
+                    <textarea class="form-control mt32" type="text" placeholder="Chú thích đơn hàng" rows="5"></textarea>
+                    <div class="text-grey-more text-uppercase font-size-18 mt16">Mã khuyến mãi</div>
+                    <div class="row py8">
+                        <div class="col-9">
+                            <input class="input-control" type="text">
+                        </div>
+                        <div class="col-3">
+                            <button class="button-normal-grey-small w-100">Nhập mã</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 offset-2">
+                    <div class="d-flex justify-content-between">
+                        <div class="">Giá tạm tính</div>
+                        <div class="">{{ctrl.totalPrice | currency: "": 0: "." }}đ</div>
+                    </div>
+                    <div class="d-flex justify-content-between mt8">
+                        <div class="">Vận chuyển</div>
+                        <div class="">0đ</div>
+                    </div>
+                    <div class="d-flex justify-content-between mt8">
+                        <div class="">Giảm giá</div>
+                        <div class="">0</div>
+                    </div>
+                    <div class="d-flex justify-content-between mt32 border-top-1 py8">
+                        <div class="text-uppercase">Tổng giá</div>
+                        <div class="">{{ctrl.totalPrice | currency: "": 0: "." }}</div>
+                    </div>
+                    <button class="button-normal-grey mt32 w-100" ng-click="ctrl.goState('cartConfirm')">Thanh toán</button>
+                </div>
             </div>
         </div>
-        <div class="row mt16">
-            <section class="cart-product-group content text-grey">
-                <div class="cart-product-item py16" ng-repeat="cartDetail in ctrl.clientCart" ng-if="cartDetail.quantity > 0">
-                    <div class="col-2">
-                        <img ng-click="ctrl.openDetail(cartDetail.product_id)" class="w-100" src="{{cartDetail.image}}" alt="">
-                    </div>
-                    <div class="col-4">
-                        <div class="text-uppercase">HAPPY FARM</div>
-                        <div class="font-size-14 mt16" ng-click="ctrl.openDetail(cartDetail.product_id)">{{cartDetail.name}}</div>
-                        <div class="font-size-12 mt16">Combo: 02</div>
-                        <div class="font-size-12">Size: XL</div>
-                    </div>
-                    <div class="col-2">
-                        <span class="subtraction" ng-click="ctrl.removeProductClient(cartDetail.product_id)">-</span>
-                        <span class="cart-product-amount text-center">{{cartDetail.quantity}}</span>
-                        <span class="addition" ng-click="ctrl.addProductClient(cartDetail.product_id)">+</span>
-                        <span class="line-height-32 font-size-14 ml8" ng-click="ctrl.removeItemCartClient(cartDetail.product_id)">Xóa sản phẩm</span>
-                    </div>
-                    <div class="col-2">
-                        <div class="cart-product-amount-price">{{cartDetail.price | currency: "": 0 }}</div>
-                    </div>
-                    <div class="col-2 text-right">
-                        <div class="cart-product-amount-price">{{cartDetail.price*cartDetail.quantity | currency: "": 0 }}</div>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div class="row py16 border-top-1 content text-grey">
-            <div class="col-6 font-size-14">
-                <div>* Đơn hàng của bạn được <a class="text-blue text-uppercase" href="">MIỄN PHÍ VẬN CHUYỂN</a></div>
-                <div class="mt16">* Đơn hàng của bạn còn thiếu 200,000 VND thì sẽ được MIỄN PHÍ VẬN CHUYỂN!</div>
-                <div>&nbsp;&nbsp;<a class="text-red" href="#">Tiếp tục mua sắm ></a></div>
-                <textarea class="form-control mt32" type="text" placeholder="Chú thích đơn hàng" rows="5"></textarea>
-                <div class="text-grey-more text-uppercase font-size-18 mt16">Mã khuyến mãi</div>
-                <div class="row py8">
-                    <div class="col-9">
-                        <input class="input-control" type="text">
-                    </div>
-                    <div class="col-3">
-                        <button class="button-normal-grey-small w-100">Nhập mã</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 offset-2">
-                <div class="d-flex justify-content-between">
-                    <div class="">Giá tạm tính</div>
-                    <div class="">{{ctrl.totalPrice | currency: "": 0: "." }}đ</div>
-                </div>
-                <div class="d-flex justify-content-between mt8">
-                    <div class="">Vận chuyển</div>
-                    <div class="">0đ</div>
-                </div>
-                <div class="d-flex justify-content-between mt8">
-                    <div class="">Giảm giá</div>
-                    <div class="">0</div>
-                </div>
-                <div class="d-flex justify-content-between mt32 border-top-1 py8">
-                    <div class="text-uppercase">Tổng giá</div>
-                    <div class="">{{ctrl.totalPrice | currency: "": 0: "." }}</div>
-                </div>
-                <button class="button-normal-grey mt32 w-100" ng-click="ctrl.goState('cartConfirm')">Thanh toán</button>
-            </div>
+        <div class="blank-order" ng-if="ctrl.clientCart.length == 0">
+           <h2>Giỏ hàng trống</h2>
         </div>
     </div>
 </main>
