--- a/public/templates/theme-v2/partials/header.html
+++ b/public/templates/theme-v2/partials/header.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 </header>
-<nav class="slide-left-nav">
+<nav class="slide-left-nav fixed-top">
     <ul class="nav navbar-nav megamenu">
         <li ng-repeat="submenu in headerCtrl.listCategory track by $index" class="dropdown">
             <a ng-click="headerCtrl.goCatPage(submenu)">
@@ -128,17 +128,25 @@
         </li>
     </ul>
 </nav>
-<div id="popupProvince" class="modal">
-	<!-- Modal content -->
-	<div class="modal-content location">
-		<a class="close" rel="modal:close"> &nbsp </a>
-		<div class="clearfix"></div>
-		<div class="text-center title">Bạn muốn sử dụng dịch vụ ở đâu?</div>
-		<form class="from-position">
-			<input type="text" ng-model="headerCtrl.provinceId" placeholder="Tỉnh / thành phố" />
-			<button ng-click="headerCtrl.goState('deals')">TIẾP TỤC</button>
-		</form>
-	</div>
+
+<div id="popupProvince" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content" style="margin-top:180px;">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Bạn muốn sử dụng dịch vụ ở đâu?</h4>
+            </div>
+            <form class="from-position">
+                <select name="singleSelect" ng-model="headerCtrl.provinceId" class="box-select" >
+                    <option value="">Tỉnh / Thành phố</option>
+                    <option ng-repeat="province in headerCtrl.provinces" ng-if="province.province_id==1 || province.province_id==2" value="{{province.province_id}}">
+                        {{province.province}}
+                    </option>
+                </select>
+                <button ng-click="headerCtrl.addProvince(1)" data-dismiss="modal">Tiếp tục</button>
+            </form>
+        </div>
+    </div>
 </div>
 <script>
     (function () {
