--- a/resources/assets/theme-v2/css/main.css
+++ b/resources/assets/theme-v2/css/main.css
@@ -29,7 +29,7 @@ label {
 
 aside {
     position: fixed;
-    width: 250px;
+    width: 270px;
     right: 0;
     top: 73px;
     bottom: 0;
@@ -936,3 +936,76 @@ p.content-discount-tag {
   opacity: 1;
   visibility: visible;
 }
+
+.w10{width:10%}
+.w20{width:20%}
+.w21{width:21%}
+.w24{width:24%}
+.w25{width:25%}
+.w40{width:40%}
+.w30{width:30%}
+.w50{width:50%}
+.w60{width:60%}
+.w55{width:55%}
+.w70{width:70%}
+.w71{width:71%}
+.w79{width:79%}
+.w80{width:80%}
+.w100{width:100%}
+.p10{padding:10px;}
+.pl2{padding-left:2px;}
+.pr5{padding-right:5px;}
+.pr10{padding-right:10px;}
+.pl5{padding-left:5px;}
+.pl10{padding-left:10px;}
+.pb2{padding-bottom:2px;}
+.pt10{padding-top:10px;}
+.pt5{padding-top:5px;}
+.pb10{padding-bottom:10px;}
+.mb10{margin-bottom:10px;}
+.mt10{margin-top:10px;}
+.ml5{margin-left:5px;}
+.ml20{margin-left:20px;}
+.ml10{margin-left:10px;}
+.mr5{margin-right:5px;}
+.mr20{margin-right:20px;}
+.mr10{margin-right:10px;}
+.bgfbf9f9{background-color: #fbf9f9;}
+.bgf6f6f6{background-color: #f6f6f6;}
+.bgffffff{background-color: #ffffff;}
+.bgebebeb{background-color: #ebebeb;}
+.hide{display:none}
+.left {float:left;}
+.left {float:left;}
+.right {float:right;}
+.text-center {text-align:center;}
+.text-right {text-align:right;}
+.fw {font-weight:700;}
+.fw100 {font-weight:100;}
+
+.cart_right .payment{cursor:pointer;border:1px #ff0000 solid;padding:10px;text-align:center;color:#ff0000;text-transform:uppercase;}
+.cart_right .remove{cursor:pointer}
+.cart .product-content{}
+.cart .product-content .left{width:30%;}
+.cart .product-content .left .img{margin-right:5px;}
+.cart .product-content .right{width: 70%;}
+.cart .product-content{border-top:1px #d7d7d7 solid;padding:10px 0px;position: relative;}
+.cart .product-content .discount{font-size:14px;font-weight:700}
+.cart .product-content span{font-size:12px;text-decoration:line-through;}
+.cart .product-content .product-cart-quantity{display: inline-block;text-align: center;margin-top: 0;margin-bottom: 0;margin-right: 0;}
+.cart .product-content .product-cart-quantity .cart-quantity-up{display: block;color: transparent;cursor: default;}
+.cart .product-content .product-cart-quantity .cart-quantity-down{display: block;color: transparent;cursor: default;}
+.cart .product-content .product-cart-quantity .cart-quantity-number{margin: 0.5rem 0;}
+.cart .product-content .cart-image{display: inline-block;vertical-align: top;text-align: center;margin-top:10px;}
+.cart .product-content .cart-image .img-holder{margin:0;height: 80px;width: 80px;}
+.img-helper>img{
+    max-width: 100%;
+    max-height: 100%;
+    vertical-align: middle;
+    display: inline-block;
+}
+.cart .product-content .product-remove{display: none;position: absolute;right: 1rem;top: 50%;-webkit-transform: translateY(-50%);-moz-transform: translateY(-50%);-ms-transform: translateY(-50%);-o-transform: translateY(-50%);transform: translateY(-50%);color: #ccc;}
+.img-holder .img-helper{vertical-align: middle;height: 100%;display: inline-block;}
+.cart .product-content .product-price{display: inline-block;position:absolute; top:40%}
+.cart .product-content:hover>.product-remove{display: block;}
+.cart .product-content:hover>.product-cart-quantity .cart-quantity-up,.cart .product-content:hover>.product-cart-quantity .cart-quantity-down{color:black;}
